# sensors

./: .gitignore  .gitlab-ci.yml  BUCK  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  clone_dependencies.sh  cmake_install.cmake  nn_test.c  subdir_glob.bzl
CMake/: BasecampServiceConfig.cmake.in  CodeCoverage.cmake  SensorServiceConfig.cmake.in
basecamp_service/src/: main.cpp
include/: client.hpp  req_rep.hpp  sensor_service.hpp  server.hpp
libbasecamp_service/: CMakeLists.txt
libbasecamp_service/include/: basecamp_service.hpp
libbasecamp_service/tests/: test_req_rep.cpp
nn_test/: nn_test  nn_test.c
proto_files/: CMakeLists.txt
src/: client.cpp  req_rep.cpp  server.cpp
src/client/: CMakeLists.txt  Makefile  client  client.cpp  cmake_install.cmake
src/sensor_service/: CMakeLists.txt  Makefile  SensorServiceConfig.cmake  cmake_install.cmake  sensor_service.cpp  sensor_service.pb.cc  sensor_service.pb.h
src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  sensors.db  server  server.cpp
tests/: CMakeLists.txt  Makefile  cmake_install.cmake  run_tests  test_req_rep.cpp  test_server.cpp
